...
        }
    }
    
    private func proceedToNextQuestionOrResults() {
        if self.isLastQuestion() {
          let viewModel = QuizResultsViewModel(
            title: "Этот раунд окончен!",
            text: "",
            buttonText: "Сыграть ещё раз")
          
            viewController?.show(quiz: viewModel)
          
      } else {
...
